--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "@codewell/state-logger",
   "version": "1.0.0",
   "description": "Log JavaScript states and actions",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build": "rollup --config",
+    "release": "npm run build:dev && npm run build:prod",
+    "build:prod": "NODE_ENV=production rollup -c",
+    "build:dev": "NODE_ENV=development rollup -c",
+    "dry-release": "npm run release && npm pack"
   },
   "repository": {
     "type": "git",
@@ -19,5 +24,16 @@
   "bugs": {
     "url": "https://github.com/codewell/state-logger/issues"
   },
-  "homepage": "https://github.com/codewell/state-logger#readme"
+  "homepage": "https://github.com/codewell/state-logger#readme",
+  "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@rollup/plugin-replace": "^2.2.1",
+    "jest": "^24.9.0",
+    "rollup": "^1.27.8",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0"
+  }
 }
