--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@rollup/plugin-commonjs": "^18.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "jest": "^26.5.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "rollup": "^2.47.0"
   }
 }
